--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "dependencies": {
         "@prisma/client": "^6.10.1",
         "bcryptjs": "^3.0.2",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "ejs": "^3.1.10",
         "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
         "nodemon": "^3.0.1",
-        "prisma": "^6.10.1"
+        "prisma": "^6.10.1",
+        "pm2": "^5.3.0"
     }
 }
