--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
         "ejs": "^3.1.10",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
-        "node-fetch": "^3.3.2"
+        "node-fetch": "^3.3.2",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1",
-        "prisma": "^6.10.1",
-        "pm2": "^5.3.0"
+        "pm2": "^5.3.0",
+        "prisma": "^6.10.1"
     }
 }
