--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^6.10.1",
+        "axios": "^1.6.0",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -20,6 +21,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "node-fetch": "^3.3.2",
+        "nodemailer": "^6.9.0",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
