--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "ejs": "^3.1.10",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "node-cron": "^4.2.0",
         "node-fetch": "^3.3.2",
         "nodemailer": "^6.9.0",
+        "qrcode": "^1.5.4",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
